# snakemake-storage-plugin-ftp

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
docs/: intro.md
snakemake_storage_plugin_ftp/: __init__.py
tests/: tests.py
