[tool.poetry]
name = "snakemake-storage-plugin-ftp"
version = "0.1.3"
description = "A Snakemake plugin for handling input and output via FTP"
authors = [
    "Christopher Tomkins-Tinch <tomkinsc@broadinstitute.org>",
    "Johannes Koester <johannes.koester@uni-due.de>"
]
readme = "README.md"
repository = "https://github.com/snakemake/snakemake-storage-plugin-ftp"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/storage/ftp.html"

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.15.1"
snakemake-interface-storage-plugins = "^4.1.0"
ftputil = "^5.0.4"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
coverage = "^7.3.2"
pytest = "^7.4.3"
snakemake = "^9.1.0"

[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"
